fixed path images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<header>
 			<div id="header" class="header_info">
 				<a href="#"
-					><img class="logo" src="/img/Arthrohard.png" alt="logo produktu"
+					><img class="logo" src="./img/Arthrohard.png" alt="logo produktu"
 				/></a>
 
 				<div class="links_info">
@@ -44,13 +44,13 @@
 		</header>
 
 		<section class="arthrohard">
-			<img class="background_grey background_grey1" src="/img/Vector1.svg" />
-			<img class="background_grey background_grey2" src="/img/Vector2.svg" />
-			<img class="background_grey background_grey3" src="/img/Vector3.svg" />
+			<img class="background_grey background_grey1" src="./img/Vector1.svg" />
+			<img class="background_grey background_grey2" src="./img/Vector2.svg" />
+			<img class="background_grey background_grey3" src="./img/Vector3.svg" />
 
 			<div class="arthrohard_part1">
 				<div class="photo_products">
-					<img src="/img/Group 18.jpg" alt="Zdjęcie produktów" />
+					<img src="./img/Group 18.jpg" alt="Zdjęcie produktów" />
 				</div>
 				<div class="product_info">
 					<h1 class="arthrohard_heading">Arthro<span>hard</span></h1>
@@ -86,16 +86,16 @@
 						<div class="photo_box">
 							<img
 								class="photo_img"
-								src="/img/kwiatek.jpg"
+								src="./img/kwiatek.jpg"
 								alt="Czarci Pazur"
 							/>
 							<img
 								class="photo-background photo-background4"
-								src="/img/Vector4.svg"
+								src="./img/Vector4.svg"
 							/>
 							<img
 								class="photo-background photo-background5"
-								src="/img/Vector5.svg"
+								src="./img/Vector5.svg"
 							/>
 						</div>
 					</div>
@@ -113,21 +113,21 @@
 						<div class="photo_box photo_box-dogs">
 							<img
 								class="photo_dog"
-								src="/img/piesek.jpg"
+								src="./img/piesek.jpg"
 								alt="Mały pies karmiony ręką"
 							/>
 							<img
 								class="photo_dog"
-								src="/img/piesek2.jpg"
+								src="./img/piesek2.jpg"
 								alt="Jedzący pies"
 							/>
 							<img
 								class="photo-background photo-background6"
-								src="/img/Vector6.svg"
+								src="./img/Vector6.svg"
 							/>
 							<img
 								class="photo-background photo-background7"
-								src="img/Vector7.svg"
+								src="./img/Vector7.svg"
 							/>
 						</div>
 					</div>
@@ -146,16 +146,16 @@
 						<div class="photo_box">
 							<img
 								class="photo_img"
-								src="/img/strzykawka.jpg"
+								src="./img/strzykawka.jpg"
 								alt="Strzykawka wypełniona dawką preparatu"
 							/>
 							<img
 								class="photo-background photo-background8"
-								src="/img/Vector8.svg"
+								src="./img/Vector8.svg"
 							/>
 							<img
 								class="photo-background photo-background9"
-								src="img/Vector9.svg"
+								src="./img/Vector9.svg"
 							/>
 						</div>
 					</div>
@@ -210,7 +210,7 @@
 				<div class="ingredients_small_box">
 					<div class="ingredient">
 						<div class="circle">
-							<img src="/img/mikroskop.svg" alt="Ikonka mikroskopu" />
+							<img src="./img/mikroskop.svg" alt="Ikonka mikroskopu" />
 						</div>
 						<h3>Siarczan glukozaminy</h3>
 						<p>650 mg</p>
@@ -225,7 +225,7 @@
 					</div>
 					<div class="ingredient">
 						<div class="circle">
-							<img src="/img/mikroskop.svg" alt="Ikonka mikroskopu" />
+							<img src="./img/mikroskop.svg" alt="Ikonka mikroskopu" />
 						</div>
 						<h3>Siarczan chondroityny</h3>
 						<p>300 mg</p>
@@ -238,7 +238,7 @@
 					</div>
 					<div class="ingredient">
 						<div class="circle">
-							<img src="/img/science.svg" alt="Ikonka składnika" />
+							<img src="./img/science.svg" alt="Ikonka składnika" />
 						</div>
 						<h3>Kwas hialuronowy</h3>
 						<p>50 mg</p>
@@ -252,14 +252,14 @@
 				</div>
 				<div class="ingredients_small_box ingredients_small_box-back">
 					<div class="small_box-background">
-						<img src="/img/sad.png" alt="Opakowanie produktu" />
+						<img src="./img/sad.png" alt="Opakowanie produktu" />
 					</div>
 					<button>Kup teraz</button>
 				</div>
 				<div class="ingredients_small_box">
 					<div class="ingredient">
 						<div class="circle">
-							<img src="/img/pazur.svg" alt="Ikonka składnika" />
+							<img src="./img/pazur.svg" alt="Ikonka składnika" />
 						</div>
 						<h3>Czarci Pazur</h3>
 						<p>250 mg</p>
@@ -271,7 +271,7 @@
 					</div>
 					<div class="ingredient">
 						<div class="circle">
-							<img src="/img/C++.svg" alt="Ikonka składnika" />
+							<img src="./img/C++.svg" alt="Ikonka składnika" />
 						</div>
 						<h3>Witamina C</h3>
 						<p>50 mg</p>
@@ -284,7 +284,7 @@
 					</div>
 					<div class="ingredient">
 						<div class="circle">
-							<img src="/img/device_hub.svg" alt="Ikonka składnika" />
+							<img src="./img/device_hub.svg" alt="Ikonka składnika" />
 						</div>
 						<h3>MSM</h3>
 						<p>250 mg</p>
